deploy/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iceberg-demo
  namespace: iceberg
spec:
  ingressClassName: traefik
  rules:
  - host: iceberg.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iceberg-demo
            port:
              number: 80
